// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> when the form has data for the input should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="text"
      value="alan.bradley@example.com"
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with className: value should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input input-important"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with id: value should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      id="user-email"
      name="email"
      type="text"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`<FormInput /> with type: value should match the snapshot 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <input
      class="form-input"
      name="email"
      type="password"
      value=""
    />
  </form>
</DocumentFragment>
`;
